--- a/package.json
+++ b/package.json
@@ -134,8 +134,9 @@
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
+    "@storybook/addon-docs": "0.0.0-pr-32813-sha-13a2dbef",
     "@storybook/addon-styling-webpack": "^2.0.0",
-    "@storybook/nextjs": "^10.0.0-rc.1",
+    "@storybook/nextjs": "0.0.0-pr-32813-sha-13a2dbef",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.8.0",
     "@testing-library/react": "16.3.0",
@@ -165,7 +166,7 @@
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-storybook": "10.0.0-rc.1",
+    "eslint-plugin-storybook": "0.0.0-pr-32813-sha-13a2dbef",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.1",
     "gh-pages": "^6.3.0",
@@ -196,7 +197,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "signale": "^1.4.0",
     "simple-git": "^3.28.0",
-    "storybook": "^10.0.0-rc.1",
+    "storybook": "0.0.0-pr-32813-sha-13a2dbef",
     "style-loader": "^4.0.0",
     "stylelint": "^16.23.1",
     "stylelint-config-standard-scss": "^15.0.1",
